# MOS6502

./: .gitignore  Makefile  README.md  compile_flags.txt  main.py  meson.build
docs/: Doxifile.in
examples/: Add16bit.c  Add32bit.c  Add64bit.c  Add8bit.c  Fibonacci.c  Stack.c  StackSR.c  Sub16bit.c  Sub32bit.c  Sub64bit.c  Sub8bit.c  meson.build
include/: vm.h
include/vm/: ADC_X_ind.h  ADC_abs.h  ADC_abs_X.h  ADC_abs_Y.h  ADC_imm.h  ADC_ind_Y.h  ADC_zpg.h  ADC_zpg_X.h  AND_X_ind.h  AND_abs.h  AND_abs_X.h  AND_abs_Y.h  AND_imm.h  AND_ind_Y.h  AND_zpg.h  AND_zpg_X.h  ASL_A.h  ASL_abs.h  ASL_abs_X.h  ASL_zpg.h  ASL_zpg_X.h  BCC_rel.h  BCS_rel.h  BEQ_rel.h  BIT_abs.h  BIT_zpg.h  BMI_rel.h  BNE_rel.h  BPL_rel.h  BRK_impl.h  BVC_rel.h  BVS_rel.h  CLC_impl.h  CLD_impl.h  CLI_impl.h  CLV_impl.h  CMP_X_ind.h  CMP_abs.h  CMP_abs_X.h  CMP_abs_Y.h  (+116 more)
programs/: fibonacci.o65
src/: main.c
src/vm/: ADC_X_ind.c  ADC_abs.c  ADC_abs_X.c  ADC_abs_Y.c  ADC_imm.c  ADC_ind_Y.c  ADC_zpg.c  ADC_zpg_X.c  AND_X_ind.c  AND_abs.c  AND_abs_X.c  AND_abs_Y.c  AND_imm.c  AND_ind_Y.c  AND_zpg.c  AND_zpg_X.c  ASL_A.c  ASL_abs.c  ASL_abs_X.c  ASL_zpg.c  ASL_zpg_X.c  BCC_rel.c  BCS_rel.c  BEQ_rel.c  BIT_abs.c  BIT_zpg.c  BMI_rel.c  BNE_rel.c  BPL_rel.c  BRK_impl.c  BVC_rel.c  BVS_rel.c  CLC_impl.c  CLD_impl.c  CLI_impl.c  CLV_impl.c  CMP_X_ind.c  CMP_abs.c  CMP_abs_X.c  CMP_abs_Y.c  (+114 more)
tests/: ADC_X_ind.c  ADC_abs.c  ADC_abs_X.c  ADC_abs_Y.c  ADC_imm.c  ADC_ind_Y.c  ADC_zpg.c  ADC_zpg_X.c  AND_X_ind.c  AND_abs.c  AND_abs_X.c  AND_abs_Y.c  AND_imm.c  AND_ind_Y.c  AND_zpg.c  AND_zpg_X.c  ASL_A.c  ASL_abs.c  ASL_abs_X.c  ASL_zpg.c  ASL_zpg_X.c  BCC_rel.c  BCS_rel.c  BEQ_rel.c  BIT_abs.c  BIT_zpg.c  BMI_rel.c  BNE_rel.c  BPL_rel.c  BRK_impl.c  BVC_rel.c  BVS_rel.c  CLC_impl.c  CLD_impl.c  CLI_impl.c  CLV_impl.c  CMP_X_ind.c  CMP_abs.c  CMP_abs_X.c  CMP_abs_Y.c  (+112 more)
