project('MOS6502', 'c',
  version : '0.1',
  default_options : ['warning_level=3'])
libvm = library('vm', [
    './src/vm/vm.c',
    './src/vm/addressing.c',
    './src/vm/ADC_imm.c',
    './src/vm/ADC_X_ind.c',
    './src/vm/ADC_abs.c',
    './src/vm/ADC_abs_X.c',
    './src/vm/ADC_abs_Y.c',
    './src/vm/ADC_ind_Y.c',
    './src/vm/ADC_zpg.c',
    './src/vm/ADC_zpg_X.c',
    './src/vm/AND_imm.c',
    './src/vm/AND_X_ind.c',
    './src/vm/AND_abs.c',
    './src/vm/AND_abs_X.c',
    './src/vm/AND_abs_Y.c',
    './src/vm/AND_ind_Y.c',
    './src/vm/AND_zpg.c',
    './src/vm/AND_zpg_X.c',
    './src/vm/ASL_A.c',
    './src/vm/ASL_abs.c',
    './src/vm/ASL_abs_X.c',
    './src/vm/ASL_zpg.c',
    './src/vm/ASL_zpg_X.c',
    './src/vm/BCC_rel.c',
    './src/vm/BCS_rel.c',
    './src/vm/BEQ_rel.c',
    './src/vm/BIT_abs.c',
    './src/vm/BIT_zpg.c',
    './src/vm/BMI_rel.c',
    './src/vm/BNE_rel.c',
    './src/vm/BPL_rel.c',
    './src/vm/BRK_impl.c',
    './src/vm/BVC_rel.c',
    './src/vm/BVS_rel.c',
    './src/vm/CLC_impl.c',
    './src/vm/CLD_impl.c',
    './src/vm/CLI_impl.c',
    './src/vm/CLV_impl.c',
    './src/vm/CMP_imm.c',
    './src/vm/CMP_X_ind.c',
    './src/vm/CMP_abs.c',
    './src/vm/CMP_abs_X.c',
    './src/vm/CMP_abs_Y.c',
    './src/vm/CMP_ind_Y.c',
    './src/vm/CMP_zpg.c',
    './src/vm/CMP_zpg_X.c',
    './src/vm/CPX_imm.c',
    './src/vm/CPX_abs.c',
    './src/vm/CPX_zpg.c',
    './src/vm/CPY_imm.c',
    './src/vm/CPY_abs.c',
    './src/vm/CPY_zpg.c',
    './src/vm/DEC_abs.c',
    './src/vm/DEC_abs_X.c',
    './src/vm/DEC_zpg.c',
    './src/vm/DEC_zpg_X.c',
    './src/vm/DEX_impl.c',
    './src/vm/DEY_impl.c',
    './src/vm/EOR_imm.c',
    './src/vm/EOR_X_ind.c',
    './src/vm/EOR_abs.c',
    './src/vm/EOR_abs_X.c',
    './src/vm/EOR_abs_Y.c',
    './src/vm/EOR_ind_Y.c',
    './src/vm/EOR_zpg.c',
    './src/vm/EOR_zpg_X.c',
    './src/vm/INC_abs.c',
    './src/vm/INC_abs_X.c',
    './src/vm/INC_zpg.c',
    './src/vm/INC_zpg_X.c',
    './src/vm/INX_impl.c',
    './src/vm/INY_impl.c',
    './src/vm/JMP_abs.c',
    './src/vm/JMP_ind.c',
    './src/vm/JSR_abs.c',
    './src/vm/LDA_imm.c',
    './src/vm/LDA_X_ind.c',
    './src/vm/LDA_abs.c',
    './src/vm/LDA_abs_X.c',
    './src/vm/LDA_abs_Y.c',
    './src/vm/LDA_ind_Y.c',
    './src/vm/LDA_zpg.c',
    './src/vm/LDA_zpg_X.c',
    './src/vm/LDX_imm.c',
    './src/vm/LDX_abs.c',
    './src/vm/LDX_abs_Y.c',
    './src/vm/LDX_zpg.c',
    './src/vm/LDX_zpg_Y.c',
    './src/vm/LDY_imm.c',
    './src/vm/LDY_abs.c',
    './src/vm/LDY_abs_X.c',
    './src/vm/LDY_zpg.c',
    './src/vm/LDY_zpg_X.c',
    './src/vm/LSR_A.c',
    './src/vm/LSR_abs.c',
    './src/vm/LSR_abs_X.c',
    './src/vm/LSR_zpg.c',
    './src/vm/LSR_zpg_X.c',
    './src/vm/NOP_impl.c',
    './src/vm/ORA_imm.c',
    './src/vm/ORA_X_ind.c',
    './src/vm/ORA_abs.c',
    './src/vm/ORA_abs_X.c',
    './src/vm/ORA_abs_Y.c',
    './src/vm/ORA_ind_Y.c',
    './src/vm/ORA_zpg.c',
    './src/vm/ORA_zpg_X.c',
    './src/vm/PHA_impl.c',
    './src/vm/PHP_impl.c',
    './src/vm/PLA_impl.c',
    './src/vm/PLP_impl.c',
    './src/vm/ROL_A.c',
    './src/vm/ROL_abs.c',
    './src/vm/ROL_abs_X.c',
    './src/vm/ROL_zpg.c',
    './src/vm/ROL_zpg_X.c',
    './src/vm/ROR_A.c',
    './src/vm/ROR_abs.c',
    './src/vm/ROR_abs_X.c',
    './src/vm/ROR_zpg.c',
    './src/vm/ROR_zpg_X.c',
    './src/vm/RTI_impl.c',
    './src/vm/RTS_impl.c',
    './src/vm/SBC_imm.c',
    './src/vm/SBC_X_ind.c',
    './src/vm/SBC_abs.c',
    './src/vm/SBC_abs_X.c',
    './src/vm/SBC_abs_Y.c',
    './src/vm/SBC_ind_Y.c',
    './src/vm/SBC_zpg.c',
    './src/vm/SBC_zpg_X.c',
    './src/vm/SEC_impl.c',
    './src/vm/SED_impl.c',
    './src/vm/SEI_impl.c',
    './src/vm/STA_X_ind.c',
    './src/vm/STA_abs.c',
    './src/vm/STA_abs_X.c',
    './src/vm/STA_abs_Y.c',
    './src/vm/STA_ind_Y.c',
    './src/vm/STA_zpg.c',
    './src/vm/STA_zpg_X.c',
    './src/vm/STX_abs.c',
    './src/vm/STX_zpg.c',
    './src/vm/STX_zpg_Y.c',
    './src/vm/STY_abs.c',
    './src/vm/STY_zpg.c',
    './src/vm/STY_zpg_X.c',
    './src/vm/TAX_impl.c',
    './src/vm/TAY_impl.c',
    './src/vm/TSX_impl.c',
    './src/vm/TXA_impl.c',
    './src/vm/TXS_impl.c',
    './src/vm/TYA_impl.c',
  ], include_directories: ['./include'])

exe = executable('main.exe', [
    './src/main.c'
  ], include_directories: ['./include'], link_with: [libvm])

subdir('./tests')
subdir('./examples')
