test_Fibonacci = executable('test_Fibonacci', [
    './Fibonacci.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('Fibonacci', test_Fibonacci)

test_Add8bit = executable('test_Add8bit', [
    './Add8bit.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('Add8bit', test_Add8bit)

test_Add16bit = executable('test_Add16bit', [
    './Add16bit.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('Add16bit', test_Add16bit)

test_Add32bit = executable('test_Add32bit', [
    './Add32bit.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('Add32bit', test_Add32bit)

test_Add64bit = executable('test_Add64bit', [
    './Add64bit.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('Add64bit', test_Add64bit)

test_StackSR = executable('test_StackSR', [
    './StackSR.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('StackSR', test_StackSR)
