test_ADC_imm = executable('test_ADC_imm', [
    './ADC_imm.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ADC_imm', test_ADC_imm)

test_ADC_X_ind = executable('test_ADC_X_ind', [
    './ADC_X_ind.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ADC_X_ind', test_ADC_X_ind)

test_ADC_abs = executable('test_ADC_abs', [
    './ADC_abs.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ADC_abs', test_ADC_abs)

test_ADC_abs_X = executable('test_ADC_abs_X', [
    './ADC_abs_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ADC_abs_X', test_ADC_abs_X)

test_ADC_abs_Y = executable('test_ADC_abs_Y', [
    './ADC_abs_Y.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ADC_abs_Y', test_ADC_abs_Y)

test_ADC_ind_Y = executable('test_ADC_ind_Y', [
    './ADC_ind_Y.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ADC_ind_Y', test_ADC_ind_Y)

test_ADC_zpg = executable('test_ADC_zpg', [
    './ADC_zpg.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ADC_zpg', test_ADC_zpg)

test_ADC_zpg_X = executable('test_ADC_zpg_X', [
    './ADC_zpg_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ADC_zpg_X', test_ADC_zpg_X)

test_AND_imm = executable('test_AND_imm', [
    './AND_imm.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('AND_imm', test_AND_imm)

test_AND_X_ind = executable('test_AND_X_ind', [
    './AND_X_ind.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('AND_X_ind', test_AND_X_ind)

test_AND_abs = executable('test_AND_abs', [
    './AND_abs.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('AND_abs', test_AND_abs)

test_AND_abs_X = executable('test_AND_abs_X', [
    './AND_abs_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('AND_abs_X', test_AND_abs_X)

test_AND_abs_Y = executable('test_AND_abs_Y', [
    './AND_abs_Y.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('AND_abs_Y', test_AND_abs_Y)

test_AND_ind_Y = executable('test_AND_ind_Y', [
    './AND_ind_Y.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('AND_ind_Y', test_AND_ind_Y)

test_AND_zpg = executable('test_AND_zpg', [
    './AND_zpg.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('AND_zpg', test_AND_zpg)

test_AND_zpg_X = executable('test_AND_zpg_X', [
    './AND_zpg_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('AND_zpg_X', test_AND_zpg_X)

test_ASL_A = executable('test_ASL_A', [
    './ASL_A.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ASL_A', test_ASL_A)

test_ASL_abs = executable('test_ASL_abs', [
    './ASL_abs.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ASL_abs', test_ASL_abs)

test_ASL_abs_X = executable('test_ASL_abs_X', [
    './ASL_abs_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ASL_abs_X', test_ASL_abs_X)

test_ASL_zpg = executable('test_ASL_zpg', [
    './ASL_zpg.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ASL_zpg', test_ASL_zpg)

test_ASL_zpg_X = executable('test_ASL_zpg_X', [
    './ASL_zpg_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ASL_zpg_X', test_ASL_zpg_X)

test_BCC_rel = executable('test_BCC_rel', [
    './BCC_rel.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('BCC_rel', test_BCC_rel)

test_BCS_rel = executable('test_BCS_rel', [
    './BCS_rel.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('BCS_rel', test_BCS_rel)

test_BEQ_rel = executable('test_BEQ_rel', [
    './BEQ_rel.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('BEQ_rel', test_BEQ_rel)

test_BIT_abs = executable('test_BIT_abs', [
    './BIT_abs.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('BIT_abs', test_BIT_abs)

test_BIT_zpg = executable('test_BIT_zpg', [
    './BIT_zpg.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('BIT_zpg', test_BIT_zpg)

test_BMI_rel = executable('test_BMI_rel', [
    './BMI_rel.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('BMI_rel', test_BMI_rel)

test_BNE_rel = executable('test_BNE_rel', [
    './BNE_rel.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('BNE_rel', test_BNE_rel)

test_BPL_rel = executable('test_BPL_rel', [
    './BPL_rel.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('BPL_rel', test_BPL_rel)

test_BRK_impl = executable('test_BRK_impl', [
    './BRK_impl.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('BRK_impl', test_BRK_impl)

test_BVC_rel = executable('test_BVC_rel', [
    './BVC_rel.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('BVC_rel', test_BVC_rel)

test_BVS_rel = executable('test_BVS_rel', [
    './BVS_rel.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('BVS_rel', test_BVS_rel)

test_CLC_impl = executable('test_CLC_impl', [
    './CLC_impl.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('CLC_impl', test_CLC_impl)

test_CLD_impl = executable('test_CLD_impl', [
    './CLD_impl.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('CLD_impl', test_CLD_impl)

test_CLI_impl = executable('test_CLI_impl', [
    './CLI_impl.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('CLI_impl', test_CLI_impl)

test_CLV_impl = executable('test_CLV_impl', [
    './CLV_impl.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('CLV_impl', test_CLV_impl)

test_CMP_imm = executable('test_CMP_imm', [
    './CMP_imm.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('CMP_imm', test_CMP_imm)

test_CMP_X_ind = executable('test_CMP_X_ind', [
    './CMP_X_ind.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('CMP_X_ind', test_CMP_X_ind)

test_CMP_abs = executable('test_CMP_abs', [
    './CMP_abs.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('CMP_abs', test_CMP_abs)

test_CMP_abs_X = executable('test_CMP_abs_X', [
    './CMP_abs_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('CMP_abs_X', test_CMP_abs_X)

test_CMP_abs_Y = executable('test_CMP_abs_Y', [
    './CMP_abs_Y.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('CMP_abs_Y', test_CMP_abs_Y)

test_CMP_ind_Y = executable('test_CMP_ind_Y', [
    './CMP_ind_Y.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('CMP_ind_Y', test_CMP_ind_Y)

test_CMP_zpg = executable('test_CMP_zpg', [
    './CMP_zpg.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('CMP_zpg', test_CMP_zpg)

test_CMP_zpg_X = executable('test_CMP_zpg_X', [
    './CMP_zpg_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('CMP_zpg_X', test_CMP_zpg_X)

test_CPX_imm = executable('test_CPX_imm', [
    './CPX_imm.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('CPX_imm', test_CPX_imm)

test_CPX_abs = executable('test_CPX_abs', [
    './CPX_abs.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('CPX_abs', test_CPX_abs)

test_CPX_zpg = executable('test_CPX_zpg', [
    './CPX_zpg.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('CPX_zpg', test_CPX_zpg)

test_CPY_imm = executable('test_CPY_imm', [
    './CPY_imm.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('CPY_imm', test_CPY_imm)

test_CPY_abs = executable('test_CPY_abs', [
    './CPY_abs.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('CPY_abs', test_CPY_abs)

test_CPY_zpg = executable('test_CPY_zpg', [
    './CPY_zpg.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('CPY_zpg', test_CPY_zpg)

test_DEC_abs = executable('test_DEC_abs', [
    './DEC_abs.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('DEC_abs', test_DEC_abs)

test_DEC_abs_X = executable('test_DEC_abs_X', [
    './DEC_abs_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('DEC_abs_X', test_DEC_abs_X)

test_DEC_zpg = executable('test_DEC_zpg', [
    './DEC_zpg.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('DEC_zpg', test_DEC_zpg)

test_DEC_zpg_X = executable('test_DEC_zpg_X', [
    './DEC_zpg_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('DEC_zpg_X', test_DEC_zpg_X)

test_DEX_impl = executable('test_DEX_impl', [
    './DEX_impl.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('DEX_impl', test_DEX_impl)

test_DEY_impl = executable('test_DEY_impl', [
    './DEY_impl.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('DEY_impl', test_DEY_impl)

test_EOR_imm = executable('test_EOR_imm', [
    './EOR_imm.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('EOR_imm', test_EOR_imm)

test_EOR_X_ind = executable('test_EOR_X_ind', [
    './EOR_X_ind.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('EOR_X_ind', test_EOR_X_ind)

test_EOR_abs = executable('test_EOR_abs', [
    './EOR_abs.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('EOR_abs', test_EOR_abs)

test_EOR_abs_X = executable('test_EOR_abs_X', [
    './EOR_abs_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('EOR_abs_X', test_EOR_abs_X)

test_EOR_abs_Y = executable('test_EOR_abs_Y', [
    './EOR_abs_Y.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('EOR_abs_Y', test_EOR_abs_Y)

test_EOR_ind_Y = executable('test_EOR_ind_Y', [
    './EOR_ind_Y.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('EOR_ind_Y', test_EOR_ind_Y)

test_EOR_zpg = executable('test_EOR_zpg', [
    './EOR_zpg.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('EOR_zpg', test_EOR_zpg)

test_EOR_zpg_X = executable('test_EOR_zpg_X', [
    './EOR_zpg_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('EOR_zpg_X', test_EOR_zpg_X)

test_INC_abs = executable('test_INC_abs', [
    './INC_abs.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('INC_abs', test_INC_abs)

test_INC_abs_X = executable('test_INC_abs_X', [
    './INC_abs_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('INC_abs_X', test_INC_abs_X)

test_INC_zpg = executable('test_INC_zpg', [
    './INC_zpg.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('INC_zpg', test_INC_zpg)

test_INC_zpg_X = executable('test_INC_zpg_X', [
    './INC_zpg_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('INC_zpg_X', test_INC_zpg_X)

test_INX_impl = executable('test_INX_impl', [
    './INX_impl.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('INX_impl', test_INX_impl)

test_INY_impl = executable('test_INY_impl', [
    './INY_impl.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('INY_impl', test_INY_impl)

test_JMP_abs = executable('test_JMP_abs', [
    './JMP_abs.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('JMP_abs', test_JMP_abs)

test_JMP_ind = executable('test_JMP_ind', [
    './JMP_ind.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('JMP_ind', test_JMP_ind)

test_JSR_abs = executable('test_JSR_abs', [
    './JSR_abs.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('JSR_abs', test_JSR_abs)

test_LDA_imm = executable('test_LDA_imm', [
    './LDA_imm.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('LDA_imm', test_LDA_imm)

test_LDA_X_ind = executable('test_LDA_X_ind', [
    './LDA_X_ind.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('LDA_X_ind', test_LDA_X_ind)

test_LDA_abs = executable('test_LDA_abs', [
    './LDA_abs.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('LDA_abs', test_LDA_abs)

test_LDA_abs_X = executable('test_LDA_abs_X', [
    './LDA_abs_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('LDA_abs_X', test_LDA_abs_X)

test_LDA_abs_Y = executable('test_LDA_abs_Y', [
    './LDA_abs_Y.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('LDA_abs_Y', test_LDA_abs_Y)

test_LDA_ind_Y = executable('test_LDA_ind_Y', [
    './LDA_ind_Y.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('LDA_ind_Y', test_LDA_ind_Y)

test_LDA_zpg = executable('test_LDA_zpg', [
    './LDA_zpg.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('LDA_zpg', test_LDA_zpg)

test_LDA_zpg_X = executable('test_LDA_zpg_X', [
    './LDA_zpg_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('LDA_zpg_X', test_LDA_zpg_X)

test_LDX_imm = executable('test_LDX_imm', [
    './LDX_imm.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('LDX_imm', test_LDX_imm)

test_LDX_abs = executable('test_LDX_abs', [
    './LDX_abs.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('LDX_abs', test_LDX_abs)

test_LDX_abs_Y = executable('test_LDX_abs_Y', [
    './LDX_abs_Y.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('LDX_abs_Y', test_LDX_abs_Y)

test_LDX_zpg = executable('test_LDX_zpg', [
    './LDX_zpg.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('LDX_zpg', test_LDX_zpg)

test_LDX_zpg_Y = executable('test_LDX_zpg_Y', [
    './LDX_zpg_Y.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('LDX_zpg_Y', test_LDX_zpg_Y)

test_LDY_imm = executable('test_LDY_imm', [
    './LDY_imm.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('LDY_imm', test_LDY_imm)

test_LDY_abs = executable('test_LDY_abs', [
    './LDY_abs.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('LDY_abs', test_LDY_abs)

test_LDY_abs_X = executable('test_LDY_abs_X', [
    './LDY_abs_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('LDY_abs_X', test_LDY_abs_X)

test_LDY_zpg = executable('test_LDY_zpg', [
    './LDY_zpg.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('LDY_zpg', test_LDY_zpg)

test_LDY_zpg_X = executable('test_LDY_zpg_X', [
    './LDY_zpg_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('LDY_zpg_X', test_LDY_zpg_X)

test_LSR_A = executable('test_LSR_A', [
    './LSR_A.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('LSR_A', test_LSR_A)

test_LSR_abs = executable('test_LSR_abs', [
    './LSR_abs.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('LSR_abs', test_LSR_abs)

test_LSR_abs_X = executable('test_LSR_abs_X', [
    './LSR_abs_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('LSR_abs_X', test_LSR_abs_X)

test_LSR_zpg = executable('test_LSR_zpg', [
    './LSR_zpg.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('LSR_zpg', test_LSR_zpg)

test_LSR_zpg_X = executable('test_LSR_zpg_X', [
    './LSR_zpg_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('LSR_zpg_X', test_LSR_zpg_X)

test_NOP_impl = executable('test_NOP_impl', [
    './NOP_impl.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('NOP_impl', test_NOP_impl)

test_ORA_imm = executable('test_ORA_imm', [
    './ORA_imm.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ORA_imm', test_ORA_imm)

test_ORA_X_ind = executable('test_ORA_X_ind', [
    './ORA_X_ind.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ORA_X_ind', test_ORA_X_ind)

test_ORA_abs = executable('test_ORA_abs', [
    './ORA_abs.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ORA_abs', test_ORA_abs)

test_ORA_abs_X = executable('test_ORA_abs_X', [
    './ORA_abs_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ORA_abs_X', test_ORA_abs_X)

test_ORA_abs_Y = executable('test_ORA_abs_Y', [
    './ORA_abs_Y.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ORA_abs_Y', test_ORA_abs_Y)

test_ORA_ind_Y = executable('test_ORA_ind_Y', [
    './ORA_ind_Y.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ORA_ind_Y', test_ORA_ind_Y)

test_ORA_zpg = executable('test_ORA_zpg', [
    './ORA_zpg.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ORA_zpg', test_ORA_zpg)

test_ORA_zpg_X = executable('test_ORA_zpg_X', [
    './ORA_zpg_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ORA_zpg_X', test_ORA_zpg_X)

test_PHA_impl = executable('test_PHA_impl', [
    './PHA_impl.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('PHA_impl', test_PHA_impl)

test_PHP_impl = executable('test_PHP_impl', [
    './PHP_impl.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('PHP_impl', test_PHP_impl)

test_PLA_impl = executable('test_PLA_impl', [
    './PLA_impl.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('PLA_impl', test_PLA_impl)

test_PLP_impl = executable('test_PLP_impl', [
    './PLP_impl.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('PLP_impl', test_PLP_impl)

test_ROL_A = executable('test_ROL_A', [
    './ROL_A.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ROL_A', test_ROL_A)

test_ROL_abs = executable('test_ROL_abs', [
    './ROL_abs.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ROL_abs', test_ROL_abs)

test_ROL_abs_X = executable('test_ROL_abs_X', [
    './ROL_abs_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ROL_abs_X', test_ROL_abs_X)

test_ROL_zpg = executable('test_ROL_zpg', [
    './ROL_zpg.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ROL_zpg', test_ROL_zpg)

test_ROL_zpg_X = executable('test_ROL_zpg_X', [
    './ROL_zpg_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ROL_zpg_X', test_ROL_zpg_X)

test_ROR_A = executable('test_ROR_A', [
    './ROR_A.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ROR_A', test_ROR_A)

test_ROR_abs = executable('test_ROR_abs', [
    './ROR_abs.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ROR_abs', test_ROR_abs)

test_ROR_abs_X = executable('test_ROR_abs_X', [
    './ROR_abs_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ROR_abs_X', test_ROR_abs_X)

test_ROR_zpg = executable('test_ROR_zpg', [
    './ROR_zpg.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ROR_zpg', test_ROR_zpg)

test_ROR_zpg_X = executable('test_ROR_zpg_X', [
    './ROR_zpg_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('ROR_zpg_X', test_ROR_zpg_X)

test_RTI_impl = executable('test_RTI_impl', [
    './RTI_impl.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('RTI_impl', test_RTI_impl)

test_RTS_impl = executable('test_RTS_impl', [
    './RTS_impl.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('RTS_impl', test_RTS_impl)

test_SBC_imm = executable('test_SBC_imm', [
    './SBC_imm.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('SBC_imm', test_SBC_imm)

test_SBC_X_ind = executable('test_SBC_X_ind', [
    './SBC_X_ind.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('SBC_X_ind', test_SBC_X_ind)

test_SBC_abs = executable('test_SBC_abs', [
    './SBC_abs.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('SBC_abs', test_SBC_abs)

test_SBC_abs_X = executable('test_SBC_abs_X', [
    './SBC_abs_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('SBC_abs_X', test_SBC_abs_X)

test_SBC_abs_Y = executable('test_SBC_abs_Y', [
    './SBC_abs_Y.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('SBC_abs_Y', test_SBC_abs_Y)

test_SBC_ind_Y = executable('test_SBC_ind_Y', [
    './SBC_ind_Y.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('SBC_ind_Y', test_SBC_ind_Y)

test_SBC_zpg = executable('test_SBC_zpg', [
    './SBC_zpg.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('SBC_zpg', test_SBC_zpg)

test_SBC_zpg_X = executable('test_SBC_zpg_X', [
    './SBC_zpg_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('SBC_zpg_X', test_SBC_zpg_X)

test_SEC_impl = executable('test_SEC_impl', [
    './SEC_impl.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('SEC_impl', test_SEC_impl)

test_SED_impl = executable('test_SED_impl', [
    './SED_impl.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('SED_impl', test_SED_impl)

test_SEI_impl = executable('test_SEI_impl', [
    './SEI_impl.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('SEI_impl', test_SEI_impl)

test_STA_X_ind = executable('test_STA_X_ind', [
    './STA_X_ind.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('STA_X_ind', test_STA_X_ind)

test_STA_abs = executable('test_STA_abs', [
    './STA_abs.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('STA_abs', test_STA_abs)

test_STA_abs_X = executable('test_STA_abs_X', [
    './STA_abs_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('STA_abs_X', test_STA_abs_X)

test_STA_abs_Y = executable('test_STA_abs_Y', [
    './STA_abs_Y.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('STA_abs_Y', test_STA_abs_Y)

test_STA_ind_Y = executable('test_STA_ind_Y', [
    './STA_ind_Y.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('STA_ind_Y', test_STA_ind_Y)

test_STA_zpg = executable('test_STA_zpg', [
    './STA_zpg.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('STA_zpg', test_STA_zpg)

test_STA_zpg_X = executable('test_STA_zpg_X', [
    './STA_zpg_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('STA_zpg_X', test_STA_zpg_X)

test_STX_abs = executable('test_STX_abs', [
    './STX_abs.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('STX_abs', test_STX_abs)

test_STX_zpg = executable('test_STX_zpg', [
    './STX_zpg.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('STX_zpg', test_STX_zpg)

test_STX_zpg_Y = executable('test_STX_zpg_Y', [
    './STX_zpg_Y.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('STX_zpg_Y', test_STX_zpg_Y)

test_STY_abs = executable('test_STY_abs', [
    './STY_abs.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('STY_abs', test_STY_abs)

test_STY_zpg = executable('test_STY_zpg', [
    './STY_zpg.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('STY_zpg', test_STY_zpg)

test_STY_zpg_X = executable('test_STY_zpg_X', [
    './STY_zpg_X.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('STY_zpg_X', test_STY_zpg_X)

test_TAX_impl = executable('test_TAX_impl', [
    './TAX_impl.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('TAX_impl', test_TAX_impl)

test_TAY_impl = executable('test_TAY_impl', [
    './TAY_impl.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('TAY_impl', test_TAY_impl)

test_TSX_impl = executable('test_TSX_impl', [
    './TSX_impl.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('TSX_impl', test_TSX_impl)

test_TXA_impl = executable('test_TXA_impl', [
    './TXA_impl.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('TXA_impl', test_TXA_impl)

test_TXS_impl = executable('test_TXS_impl', [
    './TXS_impl.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('TXS_impl', test_TXS_impl)

test_TYA_impl = executable('test_TYA_impl', [
    './TYA_impl.c',
  ], install : false,
  include_directories: ['../include'],
  link_with: libvm)
test('TYA_impl', test_TYA_impl)

